lustre/llite/file.c
@@ -4160,7 +4160,9 @@ again:
 	if (rc == 0) {
 		LASSERT(request != NULL);
 		ll_update_times(request, parent);
+	}
 
+	if (rc == 0 || rc == -EAGAIN) {
 		body = req_capsule_server_get(&request->rq_pill, &RMF_MDT_BODY);
 		LASSERT(body != NULL);
 
@@ -4181,7 +4183,7 @@ again:
 		request = NULL;
 	}
 
-	/* Try again if the file layout has changed. */
+	/* Try again if the lease has cancelled. */
 	if (rc == -EAGAIN && S_ISREG(child_inode->i_mode))
 		goto again;
 
